# algorithms

./: CMakeLists.txt
common/data_struct/bin_heap/: main.cpp
common/data_struct/hash/: main.cpp
common/data_struct/huffman/: main.cpp
common/data_struct/is_heap/: main.cpp
common/data_struct/sum/: main.cpp
common/dp_comm/0.0/: main.cpp
common/dp_comm/0.2_Units/: main.cpp
common/dp_comm/25/: main.cpp
common/dp_comm/69.2_Frog_way/: main.cpp
common/dp_comm/lcs/: main.cpp
common/dp_comm/lis/: input.txt  main.cpp
common/dp_comm/matrix/: main.cpp
common/dp_comm/palindrome/: input.txt  main.cpp
common/graphs/bfs/: main.cpp
common/graphs/dfs/: main.cpp
common/graphs/dijkstra/: main.cpp
common/graphs/easy/: main.cpp
common/graphs/max_flow/: main.cpp
common/graphs/roads_2/: main.cpp
common/kr1/task1/: main.cpp
common/kr1/task2/: main.cpp
common/kr1/task3/: main.cpp
common/kr2/task1/: main.cpp
common/kr2/task2/: main.cpp
common/kr3/task1/: main.cpp
common/kr3/task2/: main.cpp
common/kr3/task3/: main.cpp  output.out
common/new_kr/coins/: main.cpp
common/new_kr/triangle/: main.cpp
common/string/cyclic_shift/: input.txt  main.cpp
common/trees/bin_search/: main.cpp
common/trees/build_tree/: input.txt  main.cpp
common/trees/is_search/: bst.in  main.cpp
individual/bst/33/: bst.h  main.cpp
individual/bsuirOpen/1/: main.cpp
individual/bsuirOpen/b/: main.cpp
individual/bsuirOpen/d/: main.cpp
individual/bsuirOpen/e/: main.cpp
individual/data_structure/48_archive/: main.cpp
individual/data_structure/flood_it/: main.cpp
(+9 files in other folders)
